Initial dotgo (builtin) module

--- a/dotgo.io/dotgo.io.csproj
+++ b/dotgo.io/dotgo.io.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>dotgo.io</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dotgo\dotgo.csproj" />
+  </ItemGroup>
+
 </Project>
